# lg-ultragear-dimming-fix

./: .gitattributes  .gitignore  Cargo.toml  PSScriptAnalyzerSettings.psd1  check-monitor-status.ps1  install-complete.bat  install-complete.ps1  install-full-auto.bat  install-lg-ultragear-no-dimming.ps1  install-monitor-watcher.ps1  install-monitor.ps1  install-with-auto-reapply.bat  install.bat  lg-ultragear-full-cal.icm  readme.md
.github/workflows/: build.yml  ci.yml  format.yml  lint.yml  release.yml  test.yml
crates/lg-cli/: Cargo.toml  build.rs
crates/lg-cli/examples/: generate_icon.rs
crates/lg-cli/src/: elevation.rs  main.rs  tui.rs
crates/lg-cli/src/tests/: elevation_tests.rs  main_tests.rs  tui_tests.rs
crates/lg-cli/tests/: integration.rs
crates/lg-core/: Cargo.toml
crates/lg-core/src/: config.rs  lib.rs  state.rs
crates/lg-core/src/tests/: config_tests.rs  state_tests.rs
crates/lg-monitor/: Cargo.toml
crates/lg-monitor/src/: ddc.rs  lib.rs
crates/lg-monitor/src/tests/: ddc_tests.rs  monitor_tests.rs
crates/lg-notify/: Cargo.toml
crates/lg-notify/src/: lib.rs
crates/lg-notify/src/tests/: toast_tests.rs
crates/lg-profile/: Cargo.toml  build.rs
crates/lg-profile/src/: lib.rs
crates/lg-profile/src/tests/: profile_tests.rs
crates/lg-service/: Cargo.toml
crates/lg-service/src/: lib.rs
crates/lg-service/src/tests/: service_tests.rs
docs/: AUTO-REAPPLY-GUIDE.md  INSTALLATION-GUIDE.md  SOLUTION-SUMMARY.md
legacy/: install-lg-ultragear-no-dimming.ps1
legacy/scripts/: build.ps1  clean.ps1  embedder.ps1  format-check.ps1  lint.ps1  local-ci.ps1  service-build.ps1  service-ci-parallel.ps1  service-ci.ps1  service-format.ps1  service-lint.ps1  service-test.ps1  test-auto-reapply.ps1  test-notification.ps1  test.ps1
legacy/tests/: Scripts.Tests.ps1
scripts/: PSScriptAnalyzerSettings.psd1  build.ps1  bump-version.ps1  check.ps1  clean.ps1  embedder.ps1  format-check.ps1  format.ps1  lint.ps1  local-ci.ps1  package.ps1  service-build.ps1  service-ci-parallel.ps1  service-ci.ps1  service-format.ps1  service-lint.ps1  service-test.ps1  test-auto-reapply.ps1  test.ps1
service/: Cargo.toml  readme.md
service/src/: config.rs  main.rs  monitor.rs  profile.rs  service.rs  toast.rs
service/src/tests/: config_tests.rs  monitor_tests.rs  profile_tests.rs  service_tests.rs  toast_tests.rs
service/tests/: integration.rs
tests/: Scripts.Tests.ps1
