[package]
name = "lg-cli"
description = "CLI tool for the LG UltraGear display color profile manager."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lg-ultragear"
path = "src/main.rs"

[dependencies]
clap.workspace = true
env_logger.workspace = true
lg-core.workspace = true
lg-monitor.workspace = true
lg-notify.workspace = true
lg-profile.workspace = true
lg-service.workspace = true
log.workspace = true
winlog.workspace = true

[dev-dependencies]
serde.workspace = true
tempfile.workspace = true
toml.workspace = true
