[package]
name = "lg-core"
description = "Shared configuration and types for the LG UltraGear color profile tool."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
