[package]
name = "lg-service"
description = "Windows service implementation for the LG UltraGear color profile tool."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
ctrlc.workspace = true
lg-core.workspace = true
lg-monitor.workspace = true
lg-notify.workspace = true
lg-profile.workspace = true
log.workspace = true
regex.workspace = true
windows.workspace = true
windows-service.workspace = true
winreg.workspace = true
